--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 #
 # Flags below are optional
 #
+kramdown:
+  input: GFM
+  hard_wrap: false
 
 # Includes an icon in the footer for each username you enter
 footer-links:
