--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 #
 # Flags below are optional
 #
-kramdown:
-  input: GFM
+redcarpet:
   hard_wrap: false
 
 # Includes an icon in the footer for each username you enter
