--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,12 @@
 #
 
 # Name of your site (displayed in the header)
-name: Aki_Rose
+name: Simplicity
 
 # Short bio or description (displayed in the header)
-description: Developer from South Korea
+description: somewhere only we know
+
+author: Aki_Rose
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -54,11 +56,16 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
+# Outputting
+permalink: /:title/
+paginate: 5
+paginate_path: '/page/:num/'
+timezone: Asia/Seoul
+
 markdown: kramdown
 kramdown:
   input: GFM
-highlighter: pygments
-permalink: /:title/
+highlighter: rouge
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
@@ -71,6 +78,7 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-paginate
 
 # Exclude these files from your production _site
 exclude:
