--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "akirose.github.io",
+  "name": "Simplicity",
   "short_name": "akirose.github.io",
   "start_url": "/",
   "display": "standalone",
