--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,4 @@
 {
-  "name": "Simplicity",
-  "short_name": "akirose.github.io",
-  "start_url": "/",
-  "display": "standalone",
+  "name": "Messaging",
   "gcm_sender_id": "1470730163191"
 }
