--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ baseurl: ""
 #
 
 # Outputting
-permalink: /:title/
+permalink: /:categories/:title/
 paginate: 5
 paginate_path: '/page/:num/'
 timezone: Asia/Seoul
