--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
 {
-  "name": "Messaging",
-  "gcm_sender_id": "765789148361"
+  "gcm_sender_id": "AIzaSyAU3IhMTulnrdWKywSvHgNpuXceYfIRX_E",
+  "gcm_sender_id_comment": "Do not change the GCM Sender ID"
 }
