--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ version: v1.1.0
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :compressed # You might prefer to minify using :compressed
+  style: compressed
 
 # Use the following plug-ins
 plugins:
@@ -86,6 +86,8 @@ exclude:
     - Gemfile.lock
     - LICENSE
     - README.md
+    - QWEN.md
+    - CLAUDE.md
     - CNAME
 
 excerpt_separator: "<!--more-->"
